[tool.poetry]
name = "testmon"
version = "0.1.0"
description = "Testing some pipeline stuff"
authors = ["krayzpipes <kylepiper29@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"
aioredis = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
bandit = "^1.6.2"
pytest = "^5.3.4"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

